    <hch@lst.de>) and add some sort of emulation of module_put/get for 2.4.x
* fix potential integer overflow (bug detected by Ken Ashcraft
    <kash@stanford.edu>)
* change subfrequency carrier (patch by Douglas Fraser
    <ds-fraser@comcast.net>)
* use msleep() instead of schedule_timeout() (patch by Nishanth Aravamudan
    <nacc@us.ibm.com>)
* fix JPEG COM/APP marker writeing in zr360[56]0

Version 0.9.3 -> 0.9.4
----------------------
* Add YUY2 overlay (fullscreen/hardware-scaled)
* use __stringify() for array insmod options
* fix stupid flaw in open() logic (could result in oops)
* fix 2.5.x build
* remove lots of 'dead' includes from zoran_driver.c
* remove DataErr from the zr36060 IRQ Mask, this autoresets the chip when
    it loses sync, which means we don't get a timeout. Much better than
    all the manual restart handling (which only worked partly).
* introduce workaround for kfree-in-munmap-handler oops
* implement support for bitmaps rather than clips for overlay
* use try_module_get()/module_put() instead of MOD_INC/DEC_USE_COUNT
    in 2.5.x... Also implement i2c_driver->owner for all i2c clients

Version 0.9.2 -> 0.9.3
----------------------
* Fix missing check for channel < 0 in VIDIOCGCHAN (results in oops)

Version 0.9.1 -> 0.9.2
----------------------
* change default debug level 0 -> 1 ('display errors')
* add autodetect norm support to bt819
* fix all sort of lml33 problems
* changed zr->card into a non-pointer so its changeable per card entry
* add SECAM support to vpx3220
* add encoder=X/decoder=X insmod options to zoran.o (for varying cards
    such as the DC10old (mse3000/adv7175) and the DC30/DC30+ (vpx32xx))
* add "make release" feature to Makefile
* re-add some line that mysteriously got lost during VIDIOCGMBUF (fixes
    SIGFPE in xawtv)
* fix oops where semaphore wasn't down()'ed on v4l_fbuffer_free() -> double
    kfree() -> oops (please, use >= 2.4.20 only!)
* added linux/init.h everywhere for __devinit

Version 0.9.0 -> 0.9.1